--- a/main.css
+++ b/main.css
@@ -1,10 +1,58 @@
 body {
     background-image: url("assets/background.gif");
     background-repeat: repeat;
+    margin-right: 0;
+    margin-left: 0;
 }
 
+progress {
+    margin: 8px;
+    color: blue;
+}
 
-.window {
-    margin: 32px;
-    width: 250px;
+p {
+    font-size: 11.5px;
+}
+
+.wrapper {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.content_column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.mainWindow {
+    margin-right: 15px;
+    margin-left: 15px;
+    width: 700px;
+}
+
+.secondaryWindow {
+    width: 180px;
+    margin-bottom: 10px;
+}
+
+.content {
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons_right {
+    margin-top: 8px;
+    margin: 8px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.neon {
+    color: #9d04cc;
+    text-shadow: 0 0 10px #9d04cc;
 }
