--- a/main.css
+++ b/main.css
@@ -6,12 +6,18 @@ body {
 }
 
 progress {
-    margin: 8px;
+    margin: 0px;
     color: blue;
 }
 
 p {
     font-size: 11.5px;
+}
+
+.a_light_neon {
+    color: #9d04cc;
+    text-shadow: 0 0 10px #9d04cc;
+    text-decoration: none;
 }
 
 .wrapper {
@@ -50,6 +56,10 @@ p {
     margin: 8px;
     display: flex;
     justify-content: flex-end;
+}
+
+.badges {
+    margin-bottom: 10px;
 }
 
 .neon {
