--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("assets/background.gif");
+    background-image: url("../assets/background.gif");
     background-repeat: repeat;
     margin-right: 0;
     margin-left: 0;
